--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+attrs==22.2.0
+exceptiongroup==1.1.1
 gunicorn==20.1.0
+iniconfig==2.0.0
 jsonpickle==3.0.1
+packaging==23.0
+pluggy==1.0.0
 psycopg2-binary==2.9.5
+pytest==7.2.2
+tomli==2.0.1
 WebOb==1.8.7
